load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "common_go_proto",
    importpath = "github.com/ray-project/ray-go-worker/pkg/ray/generated",
    proto = "@//src/ray/protobuf:common_proto",
    visibility = ["//golang:__subpackages__"],
)

go_proto_library(
    name = "gcs_go_proto",
    importpath = "github.com/ray-project/ray-go-worker/pkg/ray/generated",
    proto = "@//src/ray/protobuf:gcs_proto",
    visibility = ["//golang:__subpackages__"],
    deps = ["//golang:common_go_proto"],
)